# voltius

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.cross-compile  Dockerfile.tauri-headless  README.md  compose.headless.yml  package.json  pnpm-lock.yaml  vitest.config.ts
.claude/skills/iterating-on-voltius-ui/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: _verify-cask.yml  _winget-bootstrap-fire.yml  build.yml  ci.yml  publish-repo.yml  release.yml  repo-publish-test.yml  tag-release.yml
crates/voltius-crypto/: Cargo.toml
crates/voltius-crypto-wasm/: Cargo.toml
docs/: design-surfaces.md
repo/: setup.sh  voltius.repo
scripts/: bootstrap-winget.sh  build-apt-repo.sh  build-yum-repo.sh  gen-homebrew-cask.sh  publish-repos.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  known_hosts.rs  lib.rs  shell_integration.rs  vault_auth.rs
src-tauri/src/commands/: connections.rs  crypto.rs  docker.rs  downloads.rs  folders.rs  fs.rs  http.rs  identities.rs  keychain.rs  keys.rs  local.rs  metrics.rs  mobaxterm.rs  mod.rs  ping.rs  plugins.rs  port_forwarding_rules.rs  port_forwarding_tunnels.rs  proxmox.rs  sftp.rs  snippets.rs  ssh.rs  sync.rs  sysinfo.rs  team_crypto.rs  termius.rs  vault.rs
src-tauri/src/commands/sftp/: dir.rs  editor.rs  ops.rs
src-tauri/src/commands/termius/: keys.rs
src-tauri/src/docker/: cli.rs  local.rs  recreate.rs  remote.rs
src-tauri/src/docker/local/: actions.rs  exec.rs  list.rs  logs.rs  mod.rs  pull.rs
src-tauri/src/local/: session.rs
src-tauri/src/metrics/: local.rs  remote.rs
src-tauri/src/port_forward/: mod.rs  poller.rs  socks.rs  tunnel.rs
src-tauri/src/processes/: local.rs  remote.rs
src-tauri/src/proxmox/: mod.rs  types.rs
src-tauri/src/serial/: connect.rs
src-tauri/src/sftp/: docker_fs.rs  mod.rs
src-tauri/src/ssh/: client.rs  session.rs
src-tauri/src/storage/: config.rs  secrets.rs
src/app/: App.tsx
src/commands/: core.commands.ts
src/components/changelog/: WhatsNewModal.tsx
src/components/connections/: ConnectionForm.tsx  EphemeralSerialConfigOverlay.tsx  SerialConnectionForm.tsx
src/components/filetransfer/: FilePane.tsx  GlobalTransferQueue.tsx  InternalDragGhost.tsx  SFTPPage.tsx  SFTPTypes.format.test.ts  SFTPTypes.ts  SidePane.tsx  TransferQueue.tsx  formatTransferProgress.test.ts  internalDrag.ts  openFileForEdit.spec.ts
src/components/folders/: FolderCard.tsx  FolderEditPanel.tsx
src/components/home/: AllHostsView.tsx  DashboardHero.tsx  DashboardHostCard.tsx  HomePage.tsx  RecentHostsSection.tsx  VaultsOverview.tsx
src/components/hosts/: HostCard.tsx  HostsPage.tsx  HostsToolbar.tsx  SnippetPickerPanel.tsx  TeamSessions.tsx
src/components/import-export/: ExportTab.tsx  ImportExportModal.tsx  ImportTab.tsx  importExport.commands.ts  useStores.ts
src/components/keychain/: IdentityForm.tsx  KeyCards.tsx  KeyExportPanel.tsx  KeyForm.tsx  KeychainPage.tsx  KeychainToolbar.tsx
src/components/known-hosts/: KnownHostsToolbar.tsx
src/components/layout/: LogoBadge.tsx  MainPanel.tsx  NavBar.tsx  NewSessionPopover.tsx  SplashScreen.tsx  SyncDropdown.tsx  TitleBar.tsx  VaultHeader.tsx  VaultSidebar.tsx  newSessionItems.test.ts
src/components/logs/: AuditEventRow.tsx  AuditExportButton.tsx  AuditFilters.tsx  AuditGate.tsx  AuditList.tsx  (+4 more)
src/hooks/: useAllPortForwardingRules.ts  useApplyTheme.ts  useAuditReporter.ts  useChangelogAutoOpen.ts  useConnectionPresence.ts  useDragSelection.ts  useEffectivePinned.ts  useHostPingPolling.ts  useImportExportContributions.ts  useKeyboard.ts  useListKeyNav.ts  usePermission.ts  useTerminal.ts  useToggleSettings.ts  useVaultContents.ts  visualViewportCore.test.ts
src/plugins/: api.ts  runtime.ts
src/services/: account.ts  auditContext.ts  auditContextResolver.ts  auditReporter.ts  auditService.ts  changelog.ts  credentials.ts  downloads.ts  editorFile.spec.ts  localAuditService.ts  multiplayerService.ts  nativeSseStream.ts  portForwardingTunnels.ts  quickConnect.ts  realtimeSseEvents.ts  sftp.ts  sftpTransferCore.test.ts  snippetRunCore.test.ts  ssh.ts  sync.ts  syncStatus.test.ts  teamMembershipEvents.ts  teamObjects.ts  teamService.ts  teamVaultActivation.ts  teamVaultLoadErrors.ts  teamVaultPermissions.ts  teamVaultSync.ts  terminalInput.ts  updater.ts  vault.ts  vaultKeyCandidates.test.ts
src/stores/: auditStore.ts  connectionStore.ts  connectivitySettingsMigration.test.ts  connectivitySettingsStore.ts  editorStore.spec.ts  editorStore.ts  folderStore.ts  hostPingStore.ts  identityStore.ts  keyStore.ts  layoutStore.ts  liveSessionManifest.test.ts  mobileNavCore.test.ts  modifierLatchCore.test.ts  modifierLatchCore.ts  modifierLatchStore.ts  panelSftpStore.spec.ts  panelSftpStore.ts  persistedAccountUiState.ts  portForwardingSettingsStore.ts  portForwardingStore.ts  reconnectBackoff.test.ts  reconnectBackoff.ts  reconnectBackoffCore.ts  savedHostMatch.test.ts  sessionStore.ts  shortcutStore.ts  snippetFolderStore.ts  snippetRecentStore.ts  snippetStore.ts  syncPrefsStore.ts  teamObjectPrefsStore.ts  teamSessionStore.ts  terminalKeyCore.test.ts  terminalKeyCore.ts  terminalSettings.test.ts  terminalSettingsStore.ts  terminalSettingsUtils.ts  toggleSettingsStore.ts  transferQueueStore.ts  (+6 more)
src/styles/: globals.css
src/themes/: presets.ts  types.ts
src/types/: index.ts
src/utils/: iconFilter.test.ts  icons.ts  keepalive.test.ts  localShellTitle.ts  tagOverflow.ts  tunnelFormat.ts  vaultScopedItems.ts
tests/: accessibleVaults.test.ts  connectionCredentials.test.ts  emailVerification.test.ts  hostSelection.test.ts  importExportCredentials.test.ts  importExportDuplicates.test.ts  importExportEncryption.test.ts  importExportSelection.test.ts  nativeSseStream.test.ts  newSessionItems.test.ts  persistedAccountUiState.test.ts  quickConnect.test.ts  realtimeSseEvents.test.ts  teamMembershipEvents.test.ts  teamVaultActivation.test.ts  teamVaultMigration.test.ts  teamVaultObjectListErrors.test.ts  teamVaultPermissions.test.ts  teamVaultRefresh.test.ts  teamVaultSecrets.test.ts  vaultScopedItems.test.ts
(+110 files in other folders)
