[package]
name = "voltius"
version = "0.2.0"
description = "Open-Source SSH & SFTP Client"
authors = ["Voltius Contributors"]
edition = "2021"

[lib]
name = "voltius_lib"
crate-type = ["cdylib", "rlib"]

# NOTE: profiles are defined at the workspace root (Cargo.toml). Cargo ignores
# `[profile.*]` in non-root members, so they must not live here.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "process", "time", "sync"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
russh = "0.61"
russh-sftp = "2.3"
tokio-util = { version = "0.7", default-features = false }
tauri-plugin-dialog = "2"
async-trait = "0.1"
thiserror = "2"
log = "0.4"
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
voltius-crypto = { path = "../crates/voltius-crypto" }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
keyring = { version = "3", features = ["linux-native", "windows-native", "apple-native"] }
base64 = "0.22"
crypto_secretbox = "0.1"
rusty-leveldb = "4"
portable-pty = "0.8"
ssh-key = { version = "0.6", features = ["ed25519", "p256", "p384", "p521", "rsa", "encryption"] }
rsa = { version = "0.9", features = ["getrandom"] }
sysinfo = "0.33"
bollard = "0.17"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
machine-uid = "0.5"
serialport = { version = "4", default-features = false }
aes = "0.9"
cfb8 = "0.9"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Credentials", "Win32_Security_Cryptography"] }
winreg = "0.56"
