[package]
name = "voltius"
version = "0.5.0"
description = "Open-Source SSH & SFTP Client"
authors = ["Voltius Contributors"]
edition = "2021"

[lib]
name = "voltius_lib"
crate-type = ["cdylib", "rlib"]

# NOTE: profiles are defined at the workspace root (Cargo.toml). Cargo ignores
# `[profile.*]` in non-root members, so they must not live here.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "process", "time", "sync"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
russh = "0.61"
russh-sftp = "2.3"
tokio-util = { version = "0.7", default-features = false }
tauri-plugin-dialog = "2"
async-trait = "0.1"
thiserror = "2"
log = "0.4"
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
voltius-crypto = { path = "../crates/voltius-crypto" }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
keyring-core = "1"
base64 = "0.22"
hostname = "0.4"
crypto_secretbox = "0.1"
rusty-leveldb = "4"
portable-pty = "0.9"
ssh-key = { version = "0.6", features = ["ed25519", "p256", "p384", "p521", "rsa", "encryption"] }
rsa = { version = "0.9", features = ["getrandom"] }
sysinfo = "0.39"
bollard = "0.21"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serialport = { version = "4", default-features = false }
aes = "0.9"
cfb8 = "0.9"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
# machine-uid 0.6 has no Android/iOS backend (its lib.rs fails to compile there).
# Desktop reads it via raw_machine_id(); mobile uses ANDROID_ID instead (see vault.rs).
machine-uid = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Credentials", "Win32_Security_Cryptography"] }
windows-registry = "0.6"
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
# Persistent credential store: the Secret Service (gnome-keyring/KWallet) over
# libdbus. The kernel keyutils store below is volatile (wiped on logout/reboot),
# which silently drops account_id/master_password and breaks auto-login + unlock
# on a fresh session. We keep keyutils as a headless/no-daemon fallback.
# crypto-rust: pure-Rust transport encryption (no system openssl); libdbus is
# bound dynamically (no `vendored`), matching the system-libsecret approach below.
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }
linux-keyutils-keyring-store = "1"
# Termius/keytar stores its master key in the Secret Service (libsecret), not in
# the kernel keyutils store above; we query it directly to import. We bind the
# system libsecret (already loaded via webkit2gtk) rather than a bundled pure-Rust
# D-Bus client (zbus), which roughly doubled the Linux binary. glib/gio are pinned
# to 0.18 to match the versions Tauri already compiles, so nothing is duplicated.
libsecret = "0.4"
gio = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
# reqwest's default rustls path uses aws-lc-rs + rustls-platform-verifier, which hangs
# the TLS handshake on Android (aws-lc-rs / uninitialised platform trust store). We hand
# reqwest a preconfigured ring + bundled-webpki-roots ClientConfig instead (see commands/http.rs).
# `ring` is already in the tree (russh); rustls is pinned to reqwest's 0.23 line.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
webpki-roots = "1"

[dev-dependencies]
tempfile = "3"
