[package]
name = "crypto-wasm"
version = "0.2.0"
edition = "2021"
description = "WASM bindings for Voltius crypto (auth_key only)"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
voltius-crypto = { path = "../voltius-crypto" }
wasm-bindgen = "0.2"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
