[package]
name = "voltius-crypto"
version = "0.2.0"
edition = "2021"
description = "Shared pure-Rust crypto primitives for Voltius"
license = "AGPL-3.0"

[dependencies]
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"
aes-gcm = "0.10"
